k8s/front/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: dev
  labels:
    app: front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - name: http
      port: 80
      targetPort: 80
