k8s/front/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: dev
  labels:
    app: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  number: 4000
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8000
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
